[package]
name = "lav"
version = "0.7.8"
edition = "2021"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
description = "Lane-Associated Vector (LAV): Portable SIMD vector trait as GAT of SIMD lane trait."
documentation = "https://docs.rs/lav"
repository = "https://github.com/qu1x/lav"
readme = "README.md"
license = "MPL-2.0"
keywords = [
	"simd-traits",
	"portable-simd",
	"computer-graphics",
]
categories = [
	"no-std",
	"science",
	"graphics",
	"mathematics",
	"game-development",
]
include = [
	"src/**/*.rs",
	"katex.html",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*",
]

[package.metadata.docs.rs]
features = ["target-features"]
rustdoc-args = [ "--html-in-header", "katex.html" ]

[package.metadata.playground]
features = ["target-features"]

[dependencies.libm]
version = "0.2.8"
optional = true

[dependencies.target-features]
version = "0.1.5"
optional = true
