[package]
name = "lav"
version = "0.8.1"
edition = "2021"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
description = "Lane-Associated Vector (LAV): Portable SIMD vector trait as GAT of SIMD lane trait."
documentation = "https://docs.rs/lav"
repository = "https://github.com/qu1x/lav"
readme = "README.md"
license = "MPL-2.0"
keywords = [
	"portable-simd",
	"simd-traits",
	"num-traits",
	"computer-graphics",
	"geometric-algebra",
]
categories = [
	"no-std",
	"science",
	"graphics",
	"mathematics",
	"game-development",
]
include = [
	"src/**/*.rs",
	"katex.html",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*",
]

[package.metadata.docs.rs]
features = ["target-features"]
rustdoc-args = [ "--html-in-header", "katex.html" ]

[package.metadata.playground]
features = ["target-features"]

[dependencies.libm]
version = "0.2.8"
optional = true

[dependencies.target-features]
version = "0.1.6"
optional = true

[lints.rust]
unsafe-code = "forbid"
missing-docs = "forbid"

[lints.rustdoc]
broken-intra-doc-links = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
tabs-in-doc-comments = "allow"
type-repetition-in-bounds = "allow"
